# MigdalEliashbergReference

./: .gitignore  CMakeLists.txt  EliashbergChain.out  README.md
data/: createGrapheneBandstructure.py  createSawToothMain.py
include/: fileHandling.h  parameters.h
include/processing/: localOneGap.h
parameters/: globals.h  graphenePhonLoc.txt  sawtoothPhonLoc.txt
plot/: plotMain.py  plotting.py
src/: eliashbergChain.cpp  fileHandling.cpp
src/processing/: localOneGap.cpp
